<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/fieldBaseUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_base_url"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/fieldDeviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_device_id" />

    <EditText
        android:id="@+id/fieldToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_token" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonClearConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/clear_config" />

</LinearLayout>
